<resources>
    <string name="app_name">View &amp; Resources</string>
    <string name="loginHint">Login</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="reset_my_password">Reset my password</string>
    <string name="login_button">Login</string>
    <string name="cancel_button">Cancel</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="select">Select</string>
    <string name="address">Address</string>
    <string name="city">City</string>
    <string name="country">Country</string>
    <string name="birthday">Birthday</string>
    <string name="notes">Notes</string>
    <string name="open_cart">open cart</string>
    <string name="show_sign_in_dialog">show sign in dialog</string>
    <string name="open_contacts">open contacts</string>
    <string name="more_info">More info</string>
    <string name="attach">Attach</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="cart_item">Cart item</string>
    <string name="place_order">Place order</string>
    <string name="order_total">Order total</string>
    <string name="subtotal">Subtotal</string>
    <string name="shipping">Shipping</string>
    <string name="tax">Tax</string>
</resources>